--- a/LaTex/preliminares/dedicatoria.tex
+++ b/LaTex/preliminares/dedicatoria.tex
@@ -12,8 +12,7 @@
 \vfill
 
 \begin{flushright}
-\itshape
-\emph{Dedicatoria} \\
+\emph{A mis padres, a mi hermana \\ y a toda mi familia.} \\
 \end{flushright}
 
 \vfill
