--- a/LaTex/preliminares/summary.tex
+++ b/LaTex/preliminares/summary.tex
@@ -8,17 +8,21 @@
 \selectlanguage{english}
 \chapter{Summary}
 
-\noindent\textbf{Keywords:} Machine Learning, Deep Learning, Artificial Intelligence, Bias-Variance, Non-Linear Approximation, Computer Vision
+\noindent\textbf{Keywords:} Machine Learning, Deep Learning, Artificial Intelligence, Bias-Variance, Non-Linear Approximation, Generalization Frameworks, Explainability
 
 \
 
-Machine learning, particularly deep learning, has become a fundamental tool in many fields, playing a decisive role in complementing and even replacing human work in various contexts. However, the training of increasingly complex models has recently revealed unexpected behaviors in their performance, among which the phenomenon known as \emph{Deep Double Descent} stands out. This behavior challenges the classical wisdom of learning by showing that the relationship between model complexity and performance does not conform to the traditional curves predicted by conventional theory.\newline
+Machine learning, particularly deep learning, has become a fundamental tool in many fields, playing a decisive role in complementing and even replacing human work in various contexts. However, the training of increasingly complex models has recently revealed unexpected behaviors in their performance, among which the phenomenon known as \emph{Deep Double Descent} stands out. This behavior challenges the classical wisdom of learning by showing that the relationship between model complexity and performance does not conform to the learning curves predicted by conventional theory.
 
-In the classical machine learning approach, increasing the capacity of a model improves its ability to fit the data, but eventually it leads to overfitting, at which point his performance begins to deteriorate. In contrast, recent findings have shown that as the model continues to increase its capacity beyond that overfitting point, its performance begins to improve again, creating a second descent that breaks with classical intuition. This behavior reveals a significant gap between theoretical knowledge and the empirical results currently observed, reminding us that the field of artificial intelligence is constantly evolving, and that advances in this discipline do not occur in parallel between theory and practice.\newline
+The classical concepts of learning are insufficient to explain certain emerging phenomena. In fact, some of them, such as the bias-variance trade-off, seem to contradict these new trends. This event reveals a significant gap between theoretical knowledge and the empirical findings recorded in recent observations, which reminds us that the field of AI is constantly evolving, and that advances in this discipline do not occur in parallel between theory and practice.
 
-In this Final Degree Project, we will focus on exposing the computational and mathematical principles essential to understand \emph{Deep Double Descent}, starting from the classical framework of bias-variance tradeoff, for which it will be necessary to resort to notions of probability theory and statistics. Likewise, concepts related to matrix algebra, which are essential to understand it in depth, will be reviewed. Thus, the main objective of the work is to present the knowledge available to date to explain this event, complementing it with the performance of various experiments that empirically support the theoretical information, in order to discuss some of the open questions raised by the current literature.\newline
+In this Final Degree Project, we will focus on exposing the underlying computational and mathematical principles necessary to understand the \emph{Deep Double Descent}, starting from the classical framework of the bias-variance trade-off, for which it will be necessary to draw on notions of probability and statistics. Likewise, concepts related to matrix algebra, which are essential for a deeper understanding, will be reviewed and introduced. However, given the common perception of neural networks as «black boxes», due to the fact that their inner workings are not precisely known, we will work in an alternative way by defining techniques that will help to explain their behavior.
 
-On the other hand, the theory of nonlinear approximation will be developed, given its prior and significant relationship with \emph{Deep Double Descent}, highlighting the different analogies they share. With all this, we seek to contribute to the construction of a bridge to reconcile classical wisdom with modern discoveries, thus favoring a more unified understanding of contemporary machine learning.\newline
+This study focuses on the definition of new generalization frameworks, known as inductive biases, that provide explanability beyond what is offered by classical theory, thus unifying traditional concepts with modern approaches. In addition, the nonlinear approach is used as a complementary way to reinforce these frameworks from a more mathematical and formal perspective.
+
+Through various experiments, both in simple architectures and in advanced convolutional architectures such as ResNet, it is shown that this phenomenon not only improves the performance of the models in classification and regression tasks, but also suggests that the solutions obtained tend to be increasingly simpler, following the philosophy of Ockham's razor principle.
+
+In conclusion, this work is not only focused on providing an explanation of the \emph{Deep Double Descent}, but also constitutes an advance towards the understanding and explainability of the new generalization trends currently observed. This behavior suggests a new perspective on the direction that machine learning should take to achieve increasingly accurate results, based on the use of models with increasing capacity, following the logic that, in this context, \emph{«bigger is better»}.
 
 \clearpage
 \thispagestyle{empty}
