--- a/LaTex/tfg.tex
+++ b/LaTex/tfg.tex
@@ -112,7 +112,8 @@
 % GLOSARIO: Opcional
 % -------------------------------------------------------------------
 
-\input{glosario} 
+\input{glosario_mates} 
+\input{glosario_info} 
 
 % -------------------------------------------------------------------
 % BACKMATTER
