LaTex: Add missing text

--- a/LaTex/capitulos/desarrollo_informatico.tex
+++ b/LaTex/capitulos/desarrollo_informatico.tex
@@ -431,7 +431,7 @@ Finalmente, para concluir este experimento, se presentan las principales conclus
 \begin{itemize}
     \item La base utilizada para la aproximación influye en la aparición del doble descenso, manifestándose al emplear la base de Legendre, pero no al utilizar las otras bases.
     \item Al aumentar el número de parámetros utilizados, la solución se ``autoregula'' hacia la solución de norma mínima del vector de parámetros, haciendo que la aproximación encontrada sea cada vez más suave, siguiendo la filosofía de Ockham.
-    \item El ruido contribuye a obtener representaciones más claras del fenómeno, lo que resulta en errores de generalización menores que los obtenidos en el primer descenso.
+    \item El ruido contribuye a obtener representaciones más claras del fenómeno, lo que resulta en errores de generalización menores que los obtenidos en el primer descenso. Esto sugiere que el modelo estaría identificando una forma de aislar ese ruido y centrarse en los datos realmente relevantes.
 \end{itemize}
 
 \subsection{\textit{Noise-wise double descent}}\label{subsec:noise-wise-dd}
